--- a/contact-us.html
+++ b/contact-us.html
@@ -32,7 +32,7 @@
                         <a href="visit-us.html">Visit us</a>
                         <a href="exhibitions.html">Exhibitions</a>
                         <a href="contribution.html">Contributions</a>
-                        <a class="link-contactus nav-highlight-page" href="contact-us.html" >CONTACT US</a>
+                        <a class="link-contactus link-contactus-h" href="contact-us.html" >CONTACT US</a>
                     </li>
                 </ul>
             </nav>
@@ -42,7 +42,7 @@
     <main>
         <section class=" wrapper-main section-contact">
             <div class="contact-info">
-                <h1>Contact us</h1>
+                <h1>Contact Us</h1>
                 <p>Ask us anything, we are happy to answer you!</p>
                 <div class="contact-point">
                     <i class="fa-solid fa-phone"></i>
@@ -51,6 +51,10 @@
                 <div class="contact-point">
                     <i class="fa-solid fa-envelope"></i>
                     <p>csm@contact.com</p>
+                </div>
+                <div class="contact-point">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>Frederiks Gate 2, 0164 Oslo</p>
                 </div>
             </div>
 
