--- a/contribution.html
+++ b/contribution.html
@@ -57,7 +57,7 @@
                             </div>  
                         </div>
                         <div class="vertical-card">
-                            <img class="vertical-card-image" src="images/Holding hand.jpg" alt="Holding hands in a compforting gesture">
+                            <img class="vertical-card-image" src="images/Holding hand.jpg" alt="Holding hands in a comforting gesture">
                             <div class="v-card-content">
                                 <h2>Volunteer</h2>
                                 <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
