--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -46,58 +46,59 @@
                 <h1>Privacy Policy</h1>
             <p> <i>Updated: 12/12/2023</i> </p>
             </div>
-            <div class="block">
-                <h2>Introduction</h2>
+            <details class="block">
+                <summary>Introduction</summary>
                 <p>Welcome to Community Science Museum, a community science museum located in Oslo. Our website is dedicated to providing information about our museum, including exhibits, events, and </p>
                 <p>educational resources. This privacy policy outlines how we handle information collected through our website. </p>
-            </div>
-            <div class="block">
-                <h2>Scope</h2>
+            </details>
+            <details class="block">
+                <summary>Scope</summary>
                 <p>This policy applies to all visitors of our website and covers how we collect, use, and safeguard any information obtained. </p>
-            </div>
-            <div class="block">
-                <h2>Information We Do Not Collect</h2>
+            </details>
+            <details class="block">
+                <summary>Information We Do Not Collect</summary>
                 <p> <strong>Cookies:</strong> Our website does not use cookies or similar tracking technologies. </p>
                 <p> <strong>Personal Data:</strong> We do not require users to create an account or log in to access our website. Therefore, we do not collect personal data like names, addresses, email addresses, or phone numbers.</p>
                 <p> <strong>User Activity Tracking:</strong> We do not track or analyse user behaviour on our website.</p>
-            </div>
-            <div class="block">
-                <h2>Information We Do Collect</h2>
+            </details>
+            <details class="block">
+                <summary>Information We Do Collect</summary>
                 <p> <strong>Voluntary Information:</strong> Visitors may choose to contact us via email or phone for inquiries. In such cases, we only use the information provided to address the inquiry.  </p>
                 <p> <strong>Aggregate Data:</strong> We may collect anonymous, aggregate data such as the number of visitors to our site for internal use. This data does not identify individual users. </p>
-            </div>
-            <div class="block">
-                <h2>Use of Information</h2>
+            </details>
+            <details class="block">
+                <summary>Use of Information</summary>
                 <p>The limited information we collect is used solely for the following purposes: </p>
                 <ul>
                     <li>-Responding to inquiries</li>
                     <li>-Improving our website and services. Ensuring the security of our website. </li>
                 </ul>
-            </div>
-            <div class="block">
-                <h2>Data Security</h2>
+            </details>
+            <details class="block">
+                <summary>Data Security</summary>
                 <p>We are committed to ensuring the security of our website and protect against unauthorized access, alteration, disclosure, or destruction of information. </p>
-            </div>
-            <div class="block">
-                <h2>Third-Party Links</h2>
+            </details>
+            <details class="block">
+                <summary>Third-Party Links</summary>
                 <p>Our website may contain links to third-party sites. We are not responsible for the privacy practices of these external sites. </p>
-            </div>
-            <div class="block">
-                <h2>Children's Privacy</h2>
+            </details>
+            <details class="block">
+                <summary>Children's Privacy</summary>
                 <p>Our website is designed for a general audience and does not knowingly collect information from children under the age of 16. </p>
-            </div>
-            <div class="block">
-                <h2>Changes to Our Privacy Policy</h2>
+            </details>
+            <details class="block">
+                <summary>Changes to Our Privacy Policy</summary>
                 <p>We may update this policy periodically. Any changes will be posted on this page with an updated revision date. </p>
-            </div>
-            <div class="block">
-                <h2>Contact Us</h2>
+            </details>
+            <details class="block">
+                <summary>Contact Us</summary>
                 <p>For any questions or concerns about our privacy policy, please contact us at csm@contact.com. </p>
-            </div>
-            <div class="block">
-                <h2>Governing Law</h2>
+            </details>
+            <details class="block">
+                <summary>Governing Law</summary>
                 <p>This privacy policy is governed by Norwegian law. </p>
-            </div>
+            </details>
+
         </section>
 
     </main>
