--- a/Terms_Conditions.html
+++ b/Terms_Conditions.html
@@ -45,53 +45,54 @@
                 <h1>Terms & Conditions</h1>
                 <p><i>Last Updated: 12/12/2023</i></p>
             </div>
-            <div class="block">
-                <h2>Introduction</h2>
+            <details class="block">
+                <summary>Introduction</summary>
                 <p>Welcome to the Community Science Museum website. By accessing our website, you agree to these terms and conditions. Please read them carefully.</p>
-            </div>
-            <div class="block">
-                <h2>Use of Website</h2>
+            </details>
+            <details class="block">
+                <summary>Use of Website</summary>
                 <p><strong>Permitted Use:</strong>The website is intended to provide information about our museum, its exhibits, events, and educational resources. Any use of the site for purposes other than this is strictly prohibited. </p>
                 <p><strong>Intellectual Property: </strong>The content on our website, including text, graphics, logos, images, and software, is the property of Community Science Museum or its content suppliers and protected by Norwegian and international copyright laws.</p>
                 <p><strong>prohibited Activities:</strong>You may not use the site in a way that damages, disables, overburdens, or impairs the site or interferes with any other party's use of the site. Unlawful or prohibited use of the website is strictly forbidden. </p>
-            </div>
-            <div class="block">
-                <h2>Content</h2>
+            </details>
+            <details class="block">
+                <summary>Content</summary>
                 <p><strong>Accuracy:</strong> We endeavour to ensure that the information on our website is accurate and up-to-date, but we cannot guarantee its complete accuracy or reliability. </p>
                 <p><strong>Changes:</strong> Content on our website is subject to change without notice.</p>
-            </div>
-            <div class="block">
-                <h2>Links to Other Websites</h2>
+            </details>
+            <details class="block">
+                <summary>Links to Other Websites</summary>
                 <p>Our website may contain links to third-party websites or services that are not owned or controlled by Community Science Museum. We have no control over, and assume no responsibility for, the content, </p>
                 <p>privacy policies, or practices of any third-party websites or services.</p>
-            </div>
-            <div class="block">
-                <h2>Disclaimer of Warranties</h2>
+            </details>
+            <details class="block">
+                <summary>Disclaimer of Warranties</summary>
                 <p>Our website is provided on an "as is" and "as available" basis. Community Science Museum makes no representations or warranties of any kind, express or implied, as to the operation of the website or </p>
                 <p>the information, content, materials, or products included on the website.</p>
-            </div>
-            <div class="block">
-                <h2>Limitation of Liability</h2>
+            </details>
+            <details class="block">
+                <summary>Limitation of Liability</summary>
                 <p>Community Science Museum will not be liable for any damages of any kind arising from the use of this website, including, but not limited to direct, indirect, incidental, punitive, and consequential damages.</p>
-            </div>
-            <div class="block">
-                <h2>Indemnification</h2>
+            </details>
+            <details class="block">
+                <summary>Indemnification</summary>
                 <p>You agree to indemnify, defend, and hold harmless Community Science Museum, its officers, directors, employees, agents, and suppliers from any claim, demand, damages, or other losses, including </p>
                 <p>reasonable attorneys' fees, asserted by any third-party due to or arising out of your use of the website or violation of these Terms.</p>
-            </div>
-            <div class="block">
-                <h2>Applicable Law</h2>
+            </details>
+            <details class="block">
+                <summary>Applicable Law</summary>
                 <p>By visiting our website, you agree that the laws of Norway, without regard to principles of conflict of laws, will govern these Terms and any dispute of any sort that might arise between you and Community Science Museum.</p>
-            </div>
-            <div class="block">
-                <h2>Changes to Terms and Conditions</h2>
+            </details>
+            <details class="block">
+                <summary>Changes to Terms and Conditions</summary>
                 <p>We reserve the right to make changes to our website, policies, and these Terms at any time. If any of these conditions shall be deemed invalid, void, or for any reason unenforceable, that condition </p>
                 <p>shall be deemed severable and shall not affect the validity and enforceability of any remaining condition.</p>
-            </div>
-            <div class="block">
-                <h2>Contact Information</h2>
+            </details>
+            <details class="block">
+                <summary>Contact Information</summary>
                 <p>For any questions regarding these Terms, please contact us at csm@support.com.</p>
-            </div>
+            </details>
+           
         </section>
     </main>
 
