--- a/exhibitions.html
+++ b/exhibitions.html
@@ -43,7 +43,7 @@
                     <h1>Exhibitions</h1>
                 <div class="card-container">
                     <a href="#" class="vertical-card card-purple">
-                        <img src="images/celso-405219.jpg" alt="moon stages">
+                        <img src="images/celso-405219.jpg" alt="Moon stages">
                         <div class="card-content">
                             <h2>Cosmology</h2>
                             <p>Explore the wonders of our cosmos. Our fantastic exhibition, "The Sky Above Us", explores the night sky and what we can see and know about the universe around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators...
