--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -109,7 +109,7 @@
             <li>
                 <a href="visit-us.html">Visit us</a>
                 <a href="contribution.html">Contributions</a>
-                <a href="Terms_Conditions.html">Terms & Conditions</a>
+                <a href="terms-conditions.html">Terms & Conditions</a>
                 <a href="privacy-policy.html">Privacy & Cookies</a>
             </li>
         </ul>
