--- a/contribution.html
+++ b/contribution.html
@@ -90,7 +90,7 @@
                 <li>
                     <a href="visit-us.html">Visit us</a>
                     <a href="contribution.html">Contributions</a>
-                    <a href="terms_conditions.html">Terms & Conditions</a>
+                    <a href="terms-conditions.html">Terms & Conditions</a>
                     <a href="privacy-policy.html">Privacy & Cookies</a>
                 </li>
             </ul>
