--- a/contact-us.html
+++ b/contact-us.html
@@ -56,7 +56,33 @@
                     <i class="fa-solid fa-location-dot"></i>
                     <p>Frederiks Gate 2, 0164 Oslo</p>
                 </div>
+                <div class="variousinfo-openinghours contact-point">
+                    <table>
+                        <tr>
+                            <th class="p-bold">MONDAY:</th>
+                            <th>CLOSED</th>
+                        </tr>
+                        <tr>
+                            <th class="p-bold">TUE-THU:</th>
+                            <th>10:00 - 16:00</th>
+                        </tr>
+                        <tr>
+                            <th class="p-bold">FRIDAY:</th>
+                            <th>10:00 - 19:00</th>
+                        </tr>
+                        <tr>
+                            <th class="p-bold">SATURDAY:</th>
+                            <th>09:00 - 16:00</th>
+                        </tr>
+                        <tr>
+                            <th class="p-bold">SUNDAY:</th>
+                            <th>09:00 - 13:00</th>
+                        </tr>
+                        
+                    </table>
+                </div>
             </div>
+            
 
             <form action="/submit-form">
                 <div class="row">
